== Version 2.5.14 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # Apps :
        * Commercial :
            - The cloning of Strategy has been disabled.
        * Graphs :
            - Cloning a Graph caused an error 500.
        * Polls :
            - The cloning of Campaigns & Replies has been disabled.
        * Recurrents :
            - The cloning of Generator has been disabled.


== Version 2.5.13 ==

  Users side :
  ------------
    # Several issues in the job scheduler has been fixed for periodic jobs :
        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.
    # 2 new settings have been added :
        - 'BASE_HTML_EXTRA_INCLUDED' to include some templates in all pages.
        - 'CELL_SIZE' to limit the size of lists (relationships, ManyToMany...)
           & so avoid some performance issues.
    # The style of the preview table in the header-filter form has been improved.
    # Apps :
        * Persons :
            - In the bar-brick for Organisations the logo was never displayed.
        * Documents :
            - You could merge system folders & so, remove them.
        * Emails :
            - There were some issues when the default owner of synchronised emails is a team.
            - A crash when accepting a synchronized email with attachments has been fixed.
        * Reports :
            - An issue with the date range visibility in the export filter popup of a report has been fixed.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The class 'creme_core.creme_jobs.base.JobType' gets a new attribute: configurable.
          If you set it to 'False', the related job cannot be edited & the value of "enabled" cannot be changed.
        # Javascript:
            * FormDialog: