@@ -3,6 +3,8 @@
   Users side :
   ------------
     # Apps :
+        * Documents :
+            - The cloning of Document has been disabled.
         * Commercial :
             - The cloning of Strategy has been disabled.
         * Graphs :
